# hotmic

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/hotmic/: __init__.py  __main__.py  cli.py  ring_buffer.py  summarize.py  transcribe.py
